--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+
+.custom-button {
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  text-transform: none;
+}
+
+.custom-button span {
+  z-index: 2;
+}
+
+.button-overlay {
+  background-color: #242528;
+  border: 1px #000;
+  border-radius: 100%;
+  width: 125%;
+  height: 400%;
+  position: absolute;
+  z-index: 1;
+  inset: auto auto -400% -12.5%;
+  transform: translate3d(0px, -125%, 0px) scale3d(1, 1, 1) rotateX(0deg)
+    rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  transform-style: preserve-3d;
+  transition: transform 0.4s ease;
+  pointer-events: none;
+}
+
+.custom-button:hover .button-overlay {
+  transform: translate3d(0px, -50%, 0px) scale3d(1, 1, 1) rotateX(0deg)
+    rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+}
