--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -22,11 +22,13 @@
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
           <button
-            class="group relative inline-flex items-center gap-3 px-6 py-3 rounded-full bg-[#e35336] text-white transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-white text-[#e35336] backdrop-blur transition-all hover:bg-[#e35336a0]"
           >
-            <span class="text-sm font-semibold tracking-wide">Contact Us</span>
+            <span class="text-sm font-semibold tracking-wide button-text-3"
+              >Contact Us</span
+            >
             <span
-              class="transition-transform duration-300 ease-in-out group-hover:translate-x-1"
+              class="transition-transform duration-300 ease-in-out group-hover:rotate-45 group-hover:translate-x-1 button-text-3"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -38,6 +40,7 @@
                 />
               </svg>
             </span>
+            <div class="button-overlay"></div>
           </button>
         </div>
       </div>
