--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -137,7 +137,7 @@
   </a>
   <a
     class="text-white hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-    href="https://oryoltd.com/blog"
+    href=""
     target="_blank"
     rel="noopener noreferrer"
   >
