--- a/src/app/components/animated-typing/animated-typing.component.html
+++ b/src/app/components/animated-typing/animated-typing.component.html
@@ -1,1 +1,1 @@
-<span class="text-[#e35336] capitalize">{{ animatedText }}<span class="blinking-cursor">|</span></span>
+<span class="text-[#FFA500] capitalize">{{ animatedText }}<span class="blinking-cursor">|</span></span>
