--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 .bg-oryo {
-    background: #e35336;
-    color: #fff;
+    background: #7d7d7d;
+    color: #FFA500;
   }
 
   .joto {
@@ -12,6 +12,6 @@
   }
 
   .active {
-    border-bottom: 2px solid #651100;
+    border-bottom: 2px solid #FFA500;
     border-radius: 0px;
   }
