--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer Call to Action -->
-<div class="bg-[#e35336] text-center py-12 px-4">
+<div class="bg-[#7d7d7d] text-center py-12 px-4">
   <h2 class="text-2xl sm:text-3xl font-semibold text-white max-w-3xl mx-auto">
     Trusted by 100's of venture-backed startups and scaleups around the world.
   </h2>
@@ -27,7 +27,7 @@
 </div>
 
 <!-- Footer Main -->
-<footer class="bg-[#e35336] py-12 px-4">
+<footer class="bg-[#7d7d7d] py-12 px-4">
   <div
     class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 items-start bg-white text-[#242528] p-9 rounded-md"
   >
@@ -48,7 +48,8 @@
     <div>
       <h4 class="font-semibold mb-3 text-lg">About</h4>
       <ul class="space-y-2 text-lg">
-        <li><a href="#" class="hover:underline">Careers</a></li>
+        <li><a href="#" class="hover:underline">Our Story</a></li>
+        <li><a href="#" class="hover:underline">Service</a></li>
       </ul>
     </div>
 
@@ -65,8 +66,8 @@
     <!-- Contact -->
     <div>
       <h4 class="font-semibold mb-3 text-lg">Get in touch</h4>
-      <p class="text-lg break-all">(415) 993–9077</p>
-      <p class="text-lg break-all">{{ "sales@stackmatix.com" }}</p>
+      <p class="text-lg break-all">(+447) 852304977</p>
+      <p class="text-lg break-all">{{ "sales@simbiatuu.com" }}</p>
     </div>
   </div>
 
