--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -1,28 +1,30 @@
-<div class="bg-[#121212] min-h-screen">
+<div class="bg-[#121212] min-h-screen ">
   <!-- NAVIGATION -->
   <app-header></app-header>
-
   <!-- HEADER -->
-  <header class="h-auto md:h-screen flex items-center">
+  <header class="h-auto md:h-screen flex items-center relative">
+
+  <div class="gradent-left w-fit h-fit md:h-[500px] md:w-[500px]"></div>
+  <div class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"></div>
     <div
       class="w-full mx-auto flex flex-col md:flex-row items-center justify-between gap-10 px-6 py-12 md:py-0 md:px-24"
     >
       <!-- Text Content -->
       <div class="text-center md:text-left md:w-1/2 pt-6 md:pt-0">
         <div
-          class="border border-[#e35336] text-white px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
+          class="border border-[#FFA500] text-white px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
         >
-          Hello There!
+          Hello there!
         </div>
         <h1 class="text-3xl md:text-5xl font-bold text-white mb-4">
           I'm SÍMBÍÀTÚÚ,
           <p>
             <app-animated-typing
               [phrases]="[
-                'content marketer',
-                'full-stack marketer',
-                'multi-entrepreneur',
-                'business builder'
+                'a content marketer',
+                'a full-stack marketer',
+                'a multi-entrepreneur',
+                'a business builder'
               ]"
             />
           </p>
@@ -39,7 +41,7 @@
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#e35336] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#ffbd59] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >View My Portfolio</span
@@ -47,7 +49,7 @@
 
             <!-- Arrow icon with hover movement -->
             <span
-              class="transition-transform duration-300 ease-in-out group-hover:rotate-45 group-hover:translate-x-1  button-text-3"
+              class="transition-transform duration-300 ease-in-out group-hover:rotate-45 group-hover:translate-x-1 button-text-3"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -67,45 +69,40 @@
       </div>
 
       <!-- Image and Floating Labels -->
-      <div class="relative md:w-1/2 mt-10 md:mt-0">
+      <div class="relative md:w-1/2 mt-0 md:mt-28">
         <div
           class="absolute top-0 left-0 md:top-28 bg-[#e35336] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
         >
-        content marketer
+          content marketer
         </div>
         <div
-          class="absolute top-10 right-0 md:top-24 bg-[#fab002] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
+          class="absolute top-10 right-0 md:top-24 bg-[#ffbd59] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
         >
-        full-stack marketer
+          full-stack marketer
         </div>
         <div
           class="absolute bottom-4 right-4 bg-green-800 text-white px-3 py-1 md:px-4 md:py-2 rounded-full shadow-md text-xs md:text-sm capitalize"
         >
-        multi-entrepreneur
+          multi-entrepreneur
         </div>
         <div
           class="absolute bottom-20 left-4 bg-[#4287f5] text-white px-3 py-1 md:px-4 md:py-2 rounded-full shadow-md text-xs md:text-sm capitalize"
         >
-        business builder
+          business builder
         </div>
         <img
-          src="/stefan-stefancik.png"
+          src="/madam.jpg"
           alt="SÍMBÍÀTÚÚ"
-          class="mx-auto rounded-full object-cover w-60 h-full md:w-fit md:h-full"
+          class="mx-auto rounded-full object-cover w-60 h-full md:w-[65%] md:h-[50%]"
         />
       </div>
     </div>
   </header>
 
-  <!-- FOOTER -->
-  <footer
-    class="bg-gradient-to-r from-[#e35336] to-[#121212] text-white p-4 text-center"
-  >
-    <ul class="flex flex-wrap justify-center gap-4 text-sm">
-      <li><a href="#" class="hover:text-yellow-200">App Design</a></li>
-      <li><a href="#" class="hover:text-yellow-200">Website Design</a></li>
-      <li><a href="#" class="hover:text-yellow-200">Dashboard</a></li>
-      <li><a href="#" class="hover:text-yellow-200">Wireframe</a></li>
-    </ul>
-  </footer>
+  <app-services></app-services>
+
+  <app-testimonials></app-testimonials>
+
+  <app-faq></app-faq>
+  <app-footer />
 </div>
