--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,63 @@
   transform: translate3d(0px, -50%, 0px) scale3d(1, 1, 1) rotateX(0deg)
     rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
 }
+
+
+
+.gradent-left {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  /* z-index: -9; */
+  border-radius: 367px;
+  opacity: 0.1;
+  background: #FFA500;
+  filter: blur(100px);
+  /* flex-shrink: 0; */
+}
+.gradent-left.adjustment-1 {
+  opacity: 0.3;
+  /* flex-shrink: 0; */
+}
+
+.gradent-top-right {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  /* z-index: -9; */
+  border-radius: 367px;
+  background: #FFA500;
+  filter: blur(100px);
+  /* flex-shrink: 0; */
+}
+.gradent {
+  position: absolute;
+  /* z-index: -9; */
+  border-radius: 367px;
+  background: #FFA500;
+  filter: blur(100px);
+  /* flex-shrink: 0; */
+}
+
+.gradent-right {
+  bottom: -100px;
+  right: 0vh;
+  /* z-index: -9; */
+  opacity: 0.3;
+  background: #FFA500;
+  filter: blur(100px);
+  /* flex-shrink: 0; */
+}
+
+
+.gradent-left-2 {
+  bottom: -100px;
+  left: 0vh;
+  /* z-index: -9; */
+  opacity: 0.3;
+  background: #54be96;
+  filter: blur(200px);
+  width: 80%;
+  height: 136%;
+  /* flex-shrink: 0; */
+}
