--- a/src/app/components/testimonials/testimonials.component.html
+++ b/src/app/components/testimonials/testimonials.component.html
@@ -1,5 +1,5 @@
 <section class="bg-[#F8FAFC] py-16 px-4 image-train-wrapper relative">
-  <div class="gradent-top-right opacity-15 w-fit h-fit md:h-[500px] md:w-[500px]"></div>
+  <div class="gradent-top-right opacity-15  w-[300px] h-[300px] md:h-[500px] md:w-[500px]"></div>
   <div class="max-w-7xl mx-auto text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-10 text-black">
       Where Startups Ignite, <br />
@@ -15,11 +15,11 @@
           class="bg-white rounded-2xl shadow-md p-6 w-80 shrink-0 flex flex-col items-start text-left"
         >
           <div class="flex items-center space-x-3 mb-4">
-            <img
+            <!-- <img
               [src]="testimonial.image"
               alt="{{ testimonial.name }}"
               class="w-10 h-10 rounded-full object-cover"
-            />
+            /> -->
             <div>
               <p class="font-semibold">{{ testimonial.name }}</p>
               <p class="text-sm text-gray-500">{{ testimonial.role }}</p>
