--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -4,8 +4,8 @@
   <!-- HEADER -->
   <header class="h-auto md:h-screen flex items-center relative">
 
-  <div class="gradent-left w-fit h-fit md:h-[500px] md:w-[500px]"></div>
-  <div class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"></div>
+  <div class="gradent top-0 left-0 opacity-30 md:opacity-10 w-[300px] h-[300px] md:h-[500px] md:w-[500px]"></div>
+  <div class="gradent-right absolute w-[300px] h-[300px] md:h-[454px] md:w-[440px]"></div>
     <div
       class="w-full mx-auto flex flex-col md:flex-row items-center justify-between gap-10 px-6 py-12 md:py-0 md:px-24"
     >
@@ -76,7 +76,7 @@
           content marketer
         </div>
         <div
-          class="absolute top-10 right-0 md:top-24 bg-[#ffbd59] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
+          class="absolute top-20 right-0 md:top-24 bg-[#ffbd59] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
         >
           full-stack marketer
         </div>
