--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,21 +5,19 @@
         <div class="flex items-center justify-between h-16 joto">
           <div class="flex justify-between items-center joto">
             <div class="flex-shrink-0">
-              <!-- <div
+              <div
                 class="flex items-center cursor-pointer"
                 [routerLink]="['/']"
               >
-                <span class="text-[#242528] text-2xl font-bold mr-2">⦿</span>
-                <span class="text-white font-extrabold text-lg"
-                  >SÍMBÍÀTÚÚ.</span
-                >
-              </div> -->
-              <img
+                <!-- <span class="text-[#242528] text-2xl font-bold mr-2">⦿</span> -->
+                <span class="text-white font-extrabold text-lg">SÍMBÍÀTÚÚ</span>
+              </div>
+              <!-- <img
                 class="h-8 w-auto"
                 src="simbiatuu.png"
                 alt="Workflow"
                 [routerLink]="['/']"
-              />
+              /> -->
             </div>
             <div class="hidden md:block">
               <div class="ml-10 flex items-baseline space-x-4">
@@ -29,7 +27,8 @@
             <div class="hidden md:block">
               <!-- Button (aligned to the right) -->
               <button
-                class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#FFA500] backdrop-blur transition-all hover:bg-[#e35336a0]"
+                class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#e85427] backdrop-blur transition-all hover:bg-[#e35336a0]"
+                (click)="send()"
               >
                 <span class="text-sm font-semibold tracking-wide button-text-3"
                   >Contact Us</span
@@ -92,7 +91,8 @@
           <ng-container *ngTemplateOutlet="navLinks"></ng-container>
 
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#ffbd59] backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-white text-[#e85427] backdrop-blur transition-all hover:bg-[#e35336a0]"
+                (click)="send()"
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >Contact Us</span
@@ -121,14 +121,14 @@
 <!-- Navigation Link Template -->
 <ng-template #navLinks>
   <a
-    class="text-[#ffbd59] hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
     [routerLink]="['/about']"
     routerLinkActive="active"
   >
     About us
   </a>
   <a
-    class="text-[#ffbd59] hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
     href=""
     target="_blank"
     rel="noopener noreferrer"
@@ -136,8 +136,8 @@
     Blog
   </a>
   <a
-    class="text-[#ffbd59] hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-    [routerLink]="['/services']"
+    class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
+    [routerLink]="['/service']"
     routerLinkActive="active"
   >
     Services
