--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -12,7 +12,7 @@
       <!-- Text Content -->
       <div class="text-center md:text-left md:w-1/2 pt-6 md:pt-0">
         <div
-          class="border border-[#FFA500] text-white px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
+          class="border border-[#e85427] text-white px-4 py-2 inline-block mb-4 text-sm md:text-base rounded-md"
         >
           Hello there!
         </div>
@@ -41,7 +41,7 @@
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#ffbd59] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#e85427] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >View My Portfolio</span
@@ -76,7 +76,7 @@
           content marketer
         </div>
         <div
-          class="absolute top-20 right-0 md:top-24 bg-[#ffbd59] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
+          class="absolute top-20 right-0 md:top-24 bg-[#e85427] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
         >
           full-stack marketer
         </div>
