--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 .bg-oryo {
-    background: #7d7d7d;
-    color: #FFA500;
+    background: #4d4d4d;
+    color: #e85427;
   }
 
   .joto {
@@ -12,6 +12,6 @@
   }
 
   .active {
-    border-bottom: 2px solid #FFA500;
+    border-bottom: 2px solid #e85427;
     border-radius: 0px;
   }
