--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -3,7 +3,7 @@
   <app-header></app-header>
   <header class="h-auto md:h-screen flex items-center bg-black relative">
     <div
-      class="gradent bottom-0 left-0 opacity-10  w-[300px] h-[300px] md:h-[500px] md:w-[500px]"
+      class="gradent bottom-0 left-0 opacity-10 w-[300px] h-[300px] md:h-[500px] md:w-[500px]"
     ></div>
     <div
       class="w-full max-w-screen-2xl mx-auto flex flex-col-reverse md:flex-row items-center justify-between gap-10 px-6 py-12 md:py-0 md:px-24"
@@ -96,7 +96,9 @@
   <div
     class="flex flex-col lg:flex-row max-w-7xl mx-auto py-10 px-4 sm:px-6 lg:px-8 gap-8 pt-20 relative"
   >
-    <div class="gradent-left  w-[300px] h-[300px] md:h-[500px] md:w-[500px]"></div>
+    <div
+      class="gradent-left w-[300px] h-[300px] md:h-[500px] md:w-[500px]"
+    ></div>
     <div
       class="gradent-right absolute w-fit h-fit md:h-[454px] md:w-[440px]"
     ></div>
