--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -129,9 +129,8 @@
   </a>
   <a
     class="text-white hover:text-[#e85427] px-3 py-2 rounded-md text-sm font-medium"
-    href=""
-    target="_blank"
-    rel="noopener noreferrer"
+    [routerLink]="['/blog']"
+    routerLinkActive="active"
   >
     Blog
   </a>
