--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -56,34 +56,34 @@
           <div class="image-train-track animate-scrollUp">
             <div class="image-train-row flex gap-4 px-2">
               <img
-                src="01.avif"
+                src="simbi.jpg"
                 alt="People meeting"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
               <img
-                src="02.avif"
+                src="forbes.jpg"
                 alt="Explaining project"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
               <img
-                src="03.jpg"
+                src="madam.jpg"
                 alt="Debugging code"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
             </div>
             <div class="image-train-row flex gap-4 px-2 mt-4">
               <img
-                src="01.avif"
+                src="madam.jpg"
                 alt="People meeting"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
               <img
-                src="02.avif"
+                src="simbi.jpg"
                 alt="Explaining project"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
               <img
-                src="03.jpg"
+                src="forbes.jpg"
                 alt="Debugging code"
                 class="w-full sm:w-52 md:w-60 object-cover rounded-lg"
               />
