--- a/src/app/page/blog/blog-details/blog-details.component.html
+++ b/src/app/page/blog/blog-details/blog-details.component.html
@@ -19,7 +19,7 @@
         <span *ngFor="let tag of blog.tags" class="bg-gray-100 px-3 py-1 rounded-full text-xs">#{{ tag }}</span>
       </div>
       <div class="flex items-center gap-4">
-        <button class="hover:text-black">♥ Like</button>
+        <!-- <button class="hover:text-black">♥ Like</button> -->
         <button class="hover:text-black">↗ Share</button>
       </div>
     </div>
