--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,7 @@
   </h2>
   <button
             class="mt-6 custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-orange-400 text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            [routerLink]="['/contact']" routerLinkActive="router-link-active" 
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >Let’s Grow Together</span
