--- a/src/app/page/contact/contact.component.html
+++ b/src/app/page/contact/contact.component.html
@@ -29,7 +29,7 @@
         <div
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
-          <button
+          <!-- <button
             class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-white text-[#e35336] backdrop-blur transition-all hover:bg-[#e35336a0]"
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
@@ -49,7 +49,7 @@
               </svg>
             </span>
             <div class="button-overlay"></div>
-          </button>
+          </button> -->
         </div>
       </div>
 
