--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -28,6 +28,7 @@
     <div class=" flex justify-center items-center mt-5">
         <button
             class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-md bg-[#e85427] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            [routerLink]="['/service']" routerLinkActive="router-link-active" 
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >View Our Services</span
