--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -42,6 +42,7 @@
         >
           <button
             class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#e85427] text-white backdrop-blur transition-all hover:bg-[#e35336a0]"
+            [routerLink]="['/about']" routerLinkActive="router-link-active" 
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >View My Portfolio</span
