--- a/src/app/page/serivce/serivce.component.html
+++ b/src/app/page/serivce/serivce.component.html
@@ -26,6 +26,7 @@
         >
           <button
             class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-white text-[#e35336] backdrop-blur transition-all hover:bg-[#e35336a0]"
+            [routerLink]="['/contact']" routerLinkActive="router-link-active" 
           >
             <span class="text-sm font-semibold tracking-wide button-text-3"
               >Contact Us</span
