--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,7 +59,7 @@
               aria-controls="mobile-menu"
               aria-expanded="false"
             >
-              <span class="sr-only">Open main menu</span>
+              <span class="sr-only">Open main</span>
               <!-- Heroicon name: menu -->
               <svg
                 class="h-6 w-6"
