--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -1,8 +1,8 @@
-<div class="bg-[#121212] min-h-screen ">
+<div class="bg-[#121212] min-h-screen">
   <!-- NAVIGATION -->
   <app-header></app-header>
   <!-- HEADER -->
-  <header class="h-auto md:h-screen flex items-center relative">
+  <header class="h-auto md:h-[90vh] flex items-center relative">
 
   <div class="gradent top-0 left-0 opacity-30 md:opacity-10 w-[300px] h-[300px] md:h-[500px] md:w-[500px]"></div>
   <div class="gradent-right absolute w-[300px] h-[300px] md:h-[454px] md:w-[440px]"></div>
@@ -71,7 +71,7 @@
 
       <!-- Image and Floating Labels -->
       <div class="relative md:w-1/2 mt-0 md:mt-28">
-        <div
+        <!-- <div
           class="absolute top-0 left-0 md:top-28 bg-[#e35336] rounded-full p-2 text-white text-xs md:text-base shadow-md capitalize"
         >
           content marketer
@@ -90,7 +90,7 @@
           class="absolute bottom-20 left-4 bg-[#4287f5] text-white px-3 py-1 md:px-4 md:py-2 rounded-full shadow-md text-xs md:text-sm capitalize"
         >
           business builder
-        </div>
+        </div> -->
         <img
           src="/madam.jpg"
           alt="SÍMBÍÀTÚÚ"
@@ -102,6 +102,7 @@
 
   <app-services></app-services>
 
+  <app-streamline></app-streamline>
   <app-testimonials></app-testimonials>
 
   <app-faq></app-faq>
