made another change

--- a/src/app/page/serivce/serivce.component.html
+++ b/src/app/page/serivce/serivce.component.html
@@ -57,7 +57,7 @@
           <div class="image-train-track animate-scrollUp">
             <div class="image-train-row flex gap-4 px-2">
               <img
-                src="simbi4.jpg"
+                src="madam.jpg"
                 alt="People meeting"
                 class="w-full object-cover rounded-lg"
               />
